Fix use of deprecated method in Tool.clone()